<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main_activity.herd_tab.HerdFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        style="@style/TagSearchView"
        app:queryHint="@string/search_by_tag_number"
        app:iconifiedByDefault="false"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow style="@style/ListingHeader">
            <TextView android:text="@string/number" style="@style/ListingColumn" android:layout_weight="0.8"/>
            <TextView android:text="@string/labelBirthDate" style="@style/ListingColumn"/>
            <TextView android:text="@string/metalTagID" style="@style/ListingColumn"/>
            <TextView android:text="@string/labelBarnName" style="@style/ListingColumn" android:layout_weight="0.9"/>
        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/herdList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>